--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint-plugin-react-hooks": "4.6.0"
+      "eslint-plugin-react-hooks": "4.6.0",
+      "@types/react": "^18.3.3",
+      "@types/react-dom": "^18.3.0"
     }
   }
 }
