--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [],
+  "include": ["apps/*", "packages/*"],
   "exclude": ["node_modules", "dist"]
 }
