--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,23 +17,24 @@
   "dependencies": {
     "expo": "~51.0.0",
     "expo-router": "~3.5.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-svg": "15.2.0",
-    "nativewind": "^2.0.11"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.73.0",
-    "@types/jest": "^29.5.12",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
+    "jest-expo": "~51.0.0",
     "jsdom": "^25.0.1",
     "tailwindcss": "3.4.0",
-    "typescript": "^5.1.3",
-    "@testing-library/react-native": "^12.8.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "jest-expo": "~51.0.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.1.3"
   }
 }
