--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -10,6 +10,7 @@
         "selector": "Literal[value=/^#([0-9a-fA-F]{3}){1,2}$/]",
         "message": "Use tokens via @starter/ui/Tailwind. No raw hex in app code."
       }
-    ]
+    ],
+    "@typescript-eslint/no-duplicate-enum-values": "off"
   }
 }
