--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": { 
     "outDir": "dist", 
-    "rootDir": ".", 
+    "rootDir": "src", 
     "jsx": "react-jsx",
-    "noEmit": false
+    "noEmit": false,
+    "allowImportingTsExtensions": false
   },
-  "include": ["src", "../../apps/web/src/components/ui"]
+  "include": ["src/**/*"]
 }
