--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["apps/*", "packages/*"],
+  "include": ["apps/*/src/**/*", "packages/*/src/**/*", "apps/*/app/**/*", "apps/*/tests/**/*", "apps/*/test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
