--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
     "@sentry/nextjs": "^10.11.0",
+    "@sentry/node": "^8.0.0",
+    "@sentry/tracing": "^7.120.4",
     "@starter/api": "workspace:*",
     "@starter/types": "workspace:*",
     "@starter/ui": "workspace:*",
@@ -87,7 +89,7 @@
     "next-intl": "^4.3.9",
     "next-themes": "^0.3.0",
     "posthog-js": "^1.266.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
