--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@heilgar/shadcn-ui-mcp-server": "^1.0.6",
+    "@jpisnice/shadcn-ui-mcp-server": "^1.1.4",
     "@playwright/test": "^1.55.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20.19.15",
@@ -36,6 +36,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "figma-mcp-server": "^2.0.1",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
