--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -95,6 +95,7 @@
     "react-markdown": "^9.0.1",
     "react-merge-refs": "^2.1.1",
     "react-use-gesture": "^9.1.3",
+    "recharts": "^3.4.1",
     "remark-gfm": "^4.0.0",
     "resend": "^6.1.1",
     "sonner": "^1.5.0",
