docs(env): document and validate environment configuration [W1-T3]

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,158 @@
+# -------------------------------------------------------------------
+# App URLs
+# -------------------------------------------------------------------
+# Public site URL used in emails/links (falls back to localhost if empty)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Explicit site URL for server-side callbacks (optional override)
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# Vercel-provided URL (no protocol) used as fallback in production
+NEXT_PUBLIC_VERCEL_URL=
+# Port used for local dev server (optional)
+PORT=3000
+
+# -------------------------------------------------------------------
 # Supabase (public client)
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# -------------------------------------------------------------------
+# Supabase project URL (public, safe to expose)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# Supabase anon/public key (public, safe to expose)
+NEXT_PUBLIC_SUPABASE_ANON_KEY=public-anon-key
 
-# Supabase (server)
-SUPABASE_SERVICE_ROLE_KEY=
-DATABASE_URL=
+# -------------------------------------------------------------------
+# Supabase (service / tooling)
+# -------------------------------------------------------------------
+# Supabase service role key (server-only, required for DB/Storage)
+SUPABASE_SERVICE_ROLE_KEY=service-role-key
+# Supabase URL for tooling/MCP (same as public URL)
+SUPABASE_URL=https://your-project.supabase.co
+# Local database connection string (used by tooling/migrations)
+DATABASE_URL=postgresql://postgres:postgres@localhost:54322/postgres
 
-# Storage
-FILES_BUCKET=files
-STORAGE_SIGNED_URL_TTL=3600
-STORAGE_OFFLINE=false
+# -------------------------------------------------------------------
+# Supabase auth providers (optional)
+# -------------------------------------------------------------------
+# GitHub OAuth client id/secret/redirect for Supabase auth
+SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID=gh_client_id
+SUPABASE_AUTH_EXTERNAL_GITHUB_SECRET=gh_client_secret
+SUPABASE_AUTH_EXTERNAL_GITHUB_REDIRECT_URI=http://localhost:3000/auth/callback
+# Google OAuth client id/secret/redirect for Supabase auth
+SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID=google_client_id
+SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET=google_client_secret
+SUPABASE_AUTH_EXTERNAL_GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback
+# Twilio auth token for Supabase SMS (if SMS login enabled)
+SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN=twilio_auth_token
 
-# Webhooks
+# -------------------------------------------------------------------
+# Supabase S3 (optional experimental)
+# -------------------------------------------------------------------
+# S3 host for experimental Oriole/S3 storage
+S3_HOST=bucket.s3.region.amazonaws.com
+# AWS region for S3 host
+S3_REGION=us-east-1
+# AWS access key for S3 host
+S3_ACCESS_KEY=aws_access_key_id
+# AWS secret key for S3 host
+S3_SECRET_KEY=aws_secret_access_key
+
+# -------------------------------------------------------------------
+# Stripe
+# -------------------------------------------------------------------
+# Stripe secret key (test)
+STRIPE_SECRET_KEY=sk_test_123456789
+# Stripe secret key (live)
+STRIPE_SECRET_KEY_LIVE=sk_live_123456789
+# Stripe webhook signing secret
+STRIPE_WEBHOOK_SECRET=whsec_test_secret
+# Stripe publishable key (test)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
+# Stripe publishable key (live)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_LIVE=pk_live_123456789
+# Stripe price ids used by billing plans
+STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_month
+STRIPE_PRO_YEARLY_PRICE_ID=price_pro_year
+STRIPE_ENTERPRISE_MONTHLY_PRICE_ID=price_enterprise_month
+STRIPE_ENTERPRISE_YEARLY_PRICE_ID=price_enterprise_year
+# Legacy plan id used by subscriptions.ts
+STRIPE_PRO_MONTHLY_PLAN_ID=price_pro_month
+# Additional optional price ids (used by shared Stripe helpers)
+STRIPE_PRICE_FREE=price_free
+STRIPE_FREE_PRICE_ID=price_free
+STRIPE_PRICE_PRO_MONTHLY=price_pro_month
+STRIPE_PRICE_PRO_ANNUAL=price_pro_year
+STRIPE_PRICE_BUSINESS_MONTHLY=price_business_month
+STRIPE_PRICE_BUSINESS_ANNUAL=price_business_year
+STRIPE_PRICE_ENTERPRISE=price_enterprise
+# Disable billing flows when set to 1
+BILLING_OFFLINE=0
+
+# -------------------------------------------------------------------
+# Email (Resend)
+# -------------------------------------------------------------------
+# Resend API key for sending transactional email
+RESEND_API_KEY=re_test_123456789
+
+# -------------------------------------------------------------------
+# Automation / Webhooks / Cron
+# -------------------------------------------------------------------
+# n8n webhook endpoint used by automation bridge
+N8N_WEBHOOK_URL=https://n8n.example.com/webhook/ltm
+# Shared secret for signing/validating n8n webhooks
+N8N_WEBHOOK_SECRET=template-secret-key
+# Signature tolerance (seconds) for webhook verification
 WEBHOOK_TOLERANCE_SEC=300
-STRIPE_WEBHOOK_SECRET=
+# Shared bearer token required by cron endpoints (optional)
+CRON_SECRET=cron-secret-token
+
+# -------------------------------------------------------------------
+# Feature flags / modes
+# -------------------------------------------------------------------
+# Enable offline/template mode (skip external calls) when set to 1
+TEMPLATE_OFFLINE=0
+# Enable Labs UI experiments on the client
+NEXT_PUBLIC_ENABLE_LABS=false
+# Default org id for console dev tasks (optional)
+NEXT_PUBLIC_DEFAULT_ORG_ID=
+# Toggle support widget rendering on the client
+NEXT_PUBLIC_SUPPORT_ENABLED=false
+
+# -------------------------------------------------------------------
+# Analytics / Observability
+# -------------------------------------------------------------------
+# PostHog public key and host
+NEXT_PUBLIC_POSTHOG_KEY=phc_test_key
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+# Sentry DSN (public for client, secret for server) and environment tag
+NEXT_PUBLIC_SENTRY_DSN=https://example.ingest.sentry.io/123456
+SENTRY_DSN=https://example.ingest.sentry.io/123456
+SENTRY_ENVIRONMENT=development
+# Cloudflare Turnstile site/secret keys (optional)
+TURNSTILE_SITE_KEY=turnstile_site_key
+TURNSTILE_SECRET_KEY=turnstile_secret_key
+
+# -------------------------------------------------------------------
+# Storage
+# -------------------------------------------------------------------
+# Default storage bucket name
+FILES_BUCKET=files
+# Signed URL TTL in seconds
+STORAGE_SIGNED_URL_TTL=3600
+# Toggle storage offline mode (true/false)
+STORAGE_OFFLINE=false
+# Max upload size in MB for attachments
+STORAGE_MAX_FILE_SIZE_MB=10
+# Allowed MIME types for uploads
+STORAGE_ALLOWED_TYPES=image/jpeg,image/png,image/webp,image/gif,application/pdf,text/plain
+
+# -------------------------------------------------------------------
+# Rate limiting
+# -------------------------------------------------------------------
+# Default requests per minute for rate limiting
+RATE_LIMIT_DEFAULT_PER_MIN=60
+# Rate limit window in milliseconds
+RATE_LIMIT_WINDOW_MS=60000
+
+# -------------------------------------------------------------------
+# MCP tool tokens (development helpers)
+# -------------------------------------------------------------------
+# Figma personal access token for MCP server (dev-only)
+FIGMA_ACCESS_TOKEN=figd_example_token
