--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -101,6 +101,7 @@
     "sonner": "^1.5.0",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.11",
+    "styled-jsx": "^5.1.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
