--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "figma-mcp-server": "^2.0.1",
     "prettier": "^3.6.2",
+    "tsx": "^4.21.0",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
