feat(billing): replace alerts with toast notifications [BILLING-FIX-4]
- Install and configure sonner toast library
- Replace all alert() calls with toast notifications
- Remove window.location.reload() with state updates
- Add loading, success, and error toast states
- Improve user feedback during async operations
- Update subscription state without page reload

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,13 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:integration": "vitest run --testPathPattern=integration",
+    "test:unit": "vitest run --testPathPattern=__tests__ --testPathIgnorePattern=integration",
     "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed",
+    "e2e:debug": "PWDEBUG=1 playwright test",
+    "playwright:install": "playwright install --with-deps",
     "verify": "pnpm -s typecheck && pnpm -s lint --fix && pnpm -s build && pnpm -s test && pnpm -s verify:routes",
     "env:check": "tsx ../../scripts/env-check.ts",
     "verify:routes": "npx tsx scripts/verify-routes.ts",
@@ -98,7 +104,7 @@
     "recharts": "^3.4.1",
     "remark-gfm": "^4.0.0",
     "resend": "^6.1.1",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.4",
     "stripe": "^14.25.0",
     "styled-components": "^6.1.11",
     "styled-jsx": "^5.1.7",
@@ -110,6 +116,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
