chore(secrets): remove hardcoded tokens and make docs template-safe

--- a/.env.example
+++ b/.env.example
@@ -58,15 +58,15 @@ S3_SECRET_KEY=aws_secret_access_key
 # Stripe
 # -------------------------------------------------------------------
 # Stripe secret key (test)
-STRIPE_SECRET_KEY=sk_test_123456789
+STRIPE_SECRET_KEY=your_stripe_secret_key
 # Stripe secret key (live)
-STRIPE_SECRET_KEY_LIVE=sk_live_123456789
+STRIPE_SECRET_KEY_LIVE=your_stripe_live_secret_key
 # Stripe webhook signing secret
-STRIPE_WEBHOOK_SECRET=whsec_test_secret
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 # Stripe publishable key (test)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 # Stripe publishable key (live)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_LIVE=pk_live_123456789
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_LIVE=your_stripe_live_publishable_key
 # Stripe price ids used by billing plans
 STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_month
 STRIPE_PRO_YEARLY_PRICE_ID=price_pro_year
@@ -95,7 +95,7 @@ RESEND_API_KEY=re_test_123456789
 # Automation / Webhooks / Cron
 # -------------------------------------------------------------------
 # n8n webhook endpoint used by automation bridge
-N8N_WEBHOOK_URL=https://n8n.example.com/webhook/ltm
+N8N_WEBHOOK_URL=https://n8n.example.com/webhook/linkdev
 # Shared secret for signing/validating n8n webhooks
 N8N_WEBHOOK_SECRET=template-secret-key
 # Signature tolerance (seconds) for webhook verification
@@ -155,4 +155,4 @@ RATE_LIMIT_WINDOW_MS=60000
 # MCP tool tokens (development helpers)
 # -------------------------------------------------------------------
 # Figma personal access token for MCP server (dev-only)
-FIGMA_ACCESS_TOKEN=figd_example_token
+FIGMA_ACCESS_TOKEN=your_figma_access_token
