Starter kit: Free/Pro/Business plans, Stripe env cleanup, build + test fixes

--- a/.env.example
+++ b/.env.example
@@ -67,21 +67,13 @@ STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 # Stripe publishable key (live)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY_LIVE=your_stripe_live_publishable_key
-# Stripe price ids used by billing plans
-STRIPE_PRO_MONTHLY_PRICE_ID=price_pro_month
-STRIPE_PRO_YEARLY_PRICE_ID=price_pro_year
-STRIPE_ENTERPRISE_MONTHLY_PRICE_ID=price_enterprise_month
-STRIPE_ENTERPRISE_YEARLY_PRICE_ID=price_enterprise_year
-# Legacy plan id used by subscriptions.ts
-STRIPE_PRO_MONTHLY_PLAN_ID=price_pro_month
-# Additional optional price ids (used by shared Stripe helpers)
+# Stripe price IDs used by billing plans (Free / Pro / Business)
+# Free is optional (defaults to a placeholder "price_free" in template mode)
 STRIPE_PRICE_FREE=price_free
-STRIPE_FREE_PRICE_ID=price_free
 STRIPE_PRICE_PRO_MONTHLY=price_pro_month
 STRIPE_PRICE_PRO_ANNUAL=price_pro_year
 STRIPE_PRICE_BUSINESS_MONTHLY=price_business_month
 STRIPE_PRICE_BUSINESS_ANNUAL=price_business_year
-STRIPE_PRICE_ENTERPRISE=price_enterprise
 # Disable billing flows when set to 1
 BILLING_OFFLINE=0
 
