--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.1",
+    "@sentry/browser": "^10.11.0",
     "@sentry/nextjs": "^10.11.0",
     "@sentry/node": "^8.0.0",
     "@sentry/tracing": "^7.120.4",
