--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,8 @@
   "exports": {
     ".": {
       "types": "./src/index.ts",
-      "import": "./dist/index.js"
+      "import": "./src/index.ts",
+      "default": "./src/index.ts"
     }
   },
   "scripts": {
