--- a/apps/mobile/tsconfig.typecheck.json
+++ b/apps/mobile/tsconfig.typecheck.json
@@ -8,7 +8,7 @@
         "./app/*"
       ]
     },
-    "types": ["jest", "@testing-library/jest-native", "react", "react-native", "nativewind/types"]
+    "types": ["node", "jest", "@testing-library/jest-native", "react", "react-native", "nativewind/types"]
   },
   "include": [
     "app/**/*.ts",
