--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [main, cursor-dev]
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -52,7 +52,6 @@ jobs:
         
       - name: Web Unit Tests
         run: pnpm --filter ./apps/web test
-        continue-on-error: true
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -73,7 +72,6 @@ jobs:
         
       - name: API Integration Tests
         run: pnpm --filter @starter/api test:integration
-        continue-on-error: true
 
   e2e-tests:
     runs-on: ubuntu-latest
@@ -99,8 +97,7 @@ jobs:
         run: pnpm --filter ./apps/web build
         
       - name: Run E2E tests
-        run: pnpm --filter ./apps/web test:e2e
-        continue-on-error: true
+        run: pnpm --filter ./apps/web e2e
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
@@ -133,13 +130,32 @@ jobs:
         run: pnpm install --frozen-lockfile
         
       - name: Run tests with coverage
-        run: pnpm --filter @starter/api test --coverage
-        continue-on-error: true
+        run: pnpm --filter @starter/api test
         
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         if: always()
         with:
-          files: ./packages/api/coverage/lcov.info
+          files: ./packages/api/coverage/all/lcov.info
           flags: api
           name: api-coverage
+
+  mobile-verify:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Verify mobile app
+        run: pnpm verify:mobile
