--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
     "lint": "eslint .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "verify": "pnpm -s typecheck && pnpm -s lint && pnpm -s test --runInBand --ci"
   },
   "dependencies": {
     "expo": "~51.0.0",
